--- a/app/src/main/res/layout/item_vulkan.xml
+++ b/app/src/main/res/layout/item_vulkan.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:hint="@string/adress_bar"
+        android:hint="@string/address_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.028"
         app:layout_constraintStart_toEndOf="@+id/imageView"
