--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/listVulkanovFragment"
-        android:name="com.example.buhat.ListVulkanovFragment"
+        android:name="com.example.buhat.vulkan.ListVulkanovFragment"
         android:label="fragment_list_vulkanov"
         tools:layout="@layout/fragment_list_vulkanov" />
 </navigation>
