--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,7 +21,11 @@
         android:id="@+id/detailVulkanFragment"
         android:name="com.example.buhat.detailVulkan.DetailVulkanFragment"
         android:label="fragment_detail_vulkan"
-        tools:layout="@layout/fragment_detail_vulkan" />
+        tools:layout="@layout/fragment_detail_vulkan" >
+        <action
+            android:id="@+id/action_detailVulkanFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
     <fragment
         android:id="@+id/addFragment"
         android:name="com.example.buhat.addVulkan.AddFragment"
@@ -51,4 +55,9 @@
             android:id="@+id/action_registrationFragment_to_listVulkanovFragment"
             app:destination="@id/listVulkanovFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.example.buhat.chat.ChatFragment"
+        android:label="activity_chat"
+        tools:layout="@layout/activity_chat" />
 </navigation>
