--- a/app/src/main/res/layout/fragment_list_vulkanov.xml
+++ b/app/src/main/res/layout/fragment_list_vulkanov.xml
@@ -23,6 +23,7 @@
         android:id="@+id/recyclerViewVulkanov"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#B2DFDB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
