--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -35,6 +35,23 @@
         android:hint="@string/description"
         android:inputType="textPersonName" />
 
+    <EditText
+        android:id="@+id/editTextUrl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:ems="10"
+        android:hint="URL"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/editTextAverageCheck"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
     <Button
         android:id="@+id/buttonAdd"
         android:layout_width="match_parent"
