--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,12 +13,12 @@
 
 
     <EditText
-        android:id="@+id/editTextLoginPhone"
+        android:id="@+id/editTextLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Phone"
-        android:inputType="phone"
+        android:hint="Login"
+        android:inputType="textPersonName"
         android:textColor="#000000"
         android:textColorHighlight="#000000"
         android:textColorHint="#000000"
