--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -30,7 +30,11 @@
         android:id="@+id/addFragment"
         android:name="com.example.buhat.addVulkan.AddFragment"
         android:label="fragment_add"
-        tools:layout="@layout/fragment_add" />
+        tools:layout="@layout/fragment_add" >
+        <action
+            android:id="@+id/action_addFragment_to_listVulkanovFragment"
+            app:destination="@id/listVulkanovFragment" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.buhat.loginAndRegestration.LoginFragment"
