--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -20,8 +20,9 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="275dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:background="#FFFFFF"
         android:ems="10"
