--- a/app/src/main/res/layout/item_vulkan.xml
+++ b/app/src/main/res/layout/item_vulkan.xml
@@ -35,7 +35,7 @@
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
-                android:layout_height="19dp"
+                android:layout_height="wrap_content"
                 android:hint="@string/name_bar"
                 android:textColor="#000000"
                 android:textSize="18sp"
