--- a/app/src/main/res/layout/fragment_detail_vulkan.xml
+++ b/app/src/main/res/layout/fragment_detail_vulkan.xml
@@ -59,7 +59,7 @@
 
     <TextView
         android:id="@+id/textViewAddress"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/price"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
